--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Instagram Clone</title>
-        <link rel="stylesheet" href="./assets/css/main.css?v1=322112021165520">
+        <link rel="stylesheet" href="./assets/css/main.css?v1=322112021171239">
         <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="./assets/users.js?v1=322112021165520"></script>
-        <script src="./assets/stories.js?v1=322112021165520"></script>
-        <script src="./assets/posts.js?v1=322112021165520"></script>
-        <script src="./assets/suggestions.js?v1=322112021165520"></script>
+        <script src="./assets/users.js?v1=322112021171239"></script>
+        <script src="./assets/stories.js?v1=322112021171239"></script>
+        <script src="./assets/posts.js?v1=322112021171239"></script>
+        <script src="./assets/suggestions.js?v1=322112021171239"></script>
     </head>
 
-<body>
+    <body>
         <header>
             <div class="nav-container">
                 <div class="logo-div">
@@ -80,7 +80,7 @@
                     <div class="profile-ic nav-icons mob-nav">
                         <div class="bor-contain"></div>
                         <div class="img-contain">
-                            <img src="/assets/images/akshat_jjain.jpg" alt="profile pic" class="profile-pic-ic">
+                            <img src="/assets/images/default-user.png" alt="profile pic" class="profile-pic-ic" id="default-pp">
                         </div>
                     </div>
                 </div>
@@ -175,10 +175,10 @@
                     <div class="login-div">
                         <div class="logged-div">
                             <div class="profile-pic">
-                                <img src="./assets/images/default-user.png" alt="" class="profile-img">
+                                <img src="./assets/images/default-user.png" alt="" class="profile-img" id="default-pp-1">
                             </div>
                             <div class="name-div">
-                                <p class="username">iamgreat_ru</p>
+                                <p class="username" id="default-username">iamgreat_ru</p>
                                 <p class="fullname">Rock Grod</p>
                             </div>
                         </div>
@@ -220,6 +220,6 @@
 
         </footer>
     </body>
-    <script src="./assets/js/main.js?v1=322112021165520"></script>
+    <script src="./assets/js/main.js?v1=322112021171239"></script>
 
 </html>
