--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             </div>
                             <div class="name-div">
                                 <p class="username" id="default-username">iamgreat_ru</p>
-                                <p class="fullname">Rock Grod</p>
+                                <p class="fullname" id="default-name">Rock Grod</p>
                             </div>
                         </div>
                         <div class="switch-div">
