--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Instagram Clone</title>
-        <link rel="stylesheet" href="./assets/css/main.css?v1=322112021172700">
+        <link rel="stylesheet" href="./assets/css/main.css">
         <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="./assets/users.js?v1=322112021172700"></script>
-        <script src="./assets/stories.js?v1=322112021172700"></script>
-        <script src="./assets/posts.js?v1=322112021172700"></script>
-        <script src="./assets/suggestions.js?v1=322112021172700"></script>
+        <script src="./assets/users.js"></script>
+        <script src="./assets/stories.js"></script>
+        <script src="./assets/posts.js"></script>
+        <script src="./assets/suggestions.js"></script>
     </head>
 
     <body>
@@ -80,12 +80,61 @@
                     <div class="profile-ic nav-icons mob-nav">
                         <div class="bor-contain"></div>
                         <div class="img-contain">
-                            <img src="/assets/images/default-user.png" alt="profile pic" class="profile-pic-ic" id="default-pp">
+                            <img src="./assets/images/default-user.png" alt="profile pic" class="profile-pic-ic"
+                                id="default-pp">
                         </div>
                     </div>
                 </div>
             </div>
         </header>
+        <div class="mob-nav-div">
+            <div class="home-ic">
+                <a href="/">
+                    <svg aria-label="Home" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
+                        viewBox="0 0 48 48" width="22">
+                        <path
+                            d="M45.5 48H30.1c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2.1-4.6-4.6-4.6s-4.6 2.1-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.6-.6 2.1 0l21.5 21.5c.3.3.4.7.4 1.1v23.5c.1.8-.6 1.5-1.4 1.5z">
+                        </path>
+                    </svg>
+                </a>
+            </div>
+            <div class="search-ic">
+                <a href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        aria-hidden="true" role="img" width="22" height="22" preserveAspectRatio="xMidYMid meet"
+                        viewBox="0 0 20 20">
+                        <path
+                            d="M17.545 15.467l-3.779-3.779a6.15 6.15 0 0 0 .898-3.21c0-3.417-2.961-6.377-6.378-6.377A6.185 6.185 0 0 0 2.1 8.287c0 3.416 2.961 6.377 6.377 6.377a6.15 6.15 0 0 0 3.115-.844l3.799 3.801a.953.953 0 0 0 1.346 0l.943-.943c.371-.371.236-.84-.135-1.211zM4.004 8.287a4.282 4.282 0 0 1 4.282-4.283c2.366 0 4.474 2.107 4.474 4.474a4.284 4.284 0 0 1-4.283 4.283c-2.366-.001-4.473-2.109-4.473-4.474z"
+                            fill="#262626" />
+                    </svg>
+                </a>
+            </div>
+            <div class="reels-ic">
+                <a href="/reels/">
+                    <svg aria-label="" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
+                        viewBox="0 0 48 48" width="22">
+                        <path
+                            d="M31.5 28.2l-11.2-6.5c-.5-.3-1-.3-1.5 0-.5.2-.8.7-.8 1.3v13c0 .5.3 1 .8 1.3.2.1.5.2.7.2.3 0 .5-.1.8-.2l11.2-6.5c.5-.3.7-.8.7-1.3s-.3-1-.7-1.3zM43.9 4c-2.5-2.4-5.5-4-12.2-4H16.2C9.6 0 6.6 1.6 4 4.1 1.6 6.6 0 9.6 0 16.2v15.5c0 6.6 1.6 9.7 4.1 12.2 2.5 2.4 5.5 4 12.2 4h15.5c6.6 0 9.7-1.6 12.2-4.1 2.4-2.5 4-5.5 4-12.2V16.2c0-6.6-1.6-9.6-4.1-12.2zM31.8 3c6.3 0 8.4 1.6 10 3.2 1.2 1.2 2.3 2.7 2.9 5.8h-9.3l-5.1-9h1.5zM16.2 3h10.5l5.1 9h-12l-5.1-9h1.5zm-10 3.2C7.3 5.1 8.7 4 11.5 3.4l4.9 8.6H3.3C3.9 8.9 5 7.4 6.2 6.2zM45 31.8c0 6.3-1.6 8.4-3.2 10-1.6 1.6-3.8 3.2-10 3.2H16.2c-6.3 0-8.4-1.6-10-3.2C4.6 40.2 3 38 3 31.8V15h42v16.8z">
+                        </path>
+                    </svg>
+                </a>
+            </div>
+            <div class="activity-ic">
+                <a href="/activity/">
+                    <svg aria-label="Activity Feed" class="_8-yf5 " color="#262626" fill="#262626" height="22"
+                        role="img" viewBox="0 0 48 48" width="22">
+                        <path
+                            d="M34.6 6.1c5.7 0 10.4 5.2 10.4 11.5 0 6.8-5.9 11-11.5 16S25 41.3 24 41.9c-1.1-.7-4.7-4-9.5-8.3-5.7-5-11.5-9.2-11.5-16C3 11.3 7.7 6.1 13.4 6.1c4.2 0 6.5 2 8.1 4.3 1.9 2.6 2.2 3.9 2.5 3.9.3 0 .6-1.3 2.5-3.9 1.6-2.3 3.9-4.3 8.1-4.3m0-3c-4.5 0-7.9 1.8-10.6 5.6-2.7-3.7-6.1-5.5-10.6-5.5C6 3.1 0 9.6 0 17.6c0 7.3 5.4 12 10.6 16.5.6.5 1.3 1.1 1.9 1.7l2.3 2c4.4 3.9 6.6 5.9 7.6 6.5.5.3 1.1.5 1.6.5.6 0 1.1-.2 1.6-.5 1-.6 2.8-2.2 7.8-6.8l2-1.8c.7-.6 1.3-1.2 2-1.7C42.7 29.6 48 25 48 17.6c0-8-6-14.5-13.4-14.5z">
+                        </path>
+                    </svg></a>
+            </div>
+            <div class="profile-ic">
+                <div class="bor-contain"></div>
+                <div class="img-contain">
+                    <img src="./assets/images/default-user.png" alt="profile pic" class="profile-pic-ic" id="default-pp">
+                </div>
+            </div>
+        </div>
         <main>
             <div class="main-container">
                 <div class="left-part">
@@ -175,7 +224,8 @@
                     <div class="login-div">
                         <div class="logged-div">
                             <div class="profile-pic">
-                                <img src="./assets/images/default-user.png" alt="" class="profile-img" id="default-pp-1">
+                                <img src="./assets/images/default-user.png" alt="" class="profile-img"
+                                    id="default-pp-1">
                             </div>
                             <div class="name-div">
                                 <p class="username" id="default-username">iamgreat_ru</p>
@@ -220,6 +270,6 @@
 
         </footer>
     </body>
-    <script src="./assets/js/main.js?v1=322112021172700"></script>
+    <script src="./assets/js/main.js"></script>
 
 </html>
