--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Instagram Clone</title>
         <link rel="stylesheet" href="./assets/css/main.css">
+        <link rel="stylesheet" href="./assets/css/common.css">
         <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="./assets/users.js"></script>
         <script src="./assets/stories.js"></script>
         <script src="./assets/posts.js"></script>
         <script src="./assets/suggestions.js"></script>
+        <script src="./assets/js/common.js"></script>
     </head>
 
     <body>
