--- a/profile/index.html
+++ b/profile/index.html
@@ -19,7 +19,7 @@
     <body>
         <header>
             <div class="nav-container">
-                <a href="/index1.html">
+                <a href="/Instagram-clone/index1.html">
                     <div class="logo-div">
                         <img src="/Instagram-clone/assets/images/logo-name.png" alt="Instagram">
                     </div>
