--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="opt-div">
                     <div class="home-ic nav-icons mob-nav">
-                        <a href="/">
+                        <a href="./">
                             <svg aria-label="Home" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                                 viewBox="0 0 48 48" width="22">
                                 <path
@@ -37,7 +37,7 @@
                         </a>
                     </div>
                     <div class="direct-ic nav-icons">
-                        <a href="/inbox/">
+                        <a href="./inbox/">
                             <svg aria-label="Messenger" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
                                 <path
@@ -46,7 +46,7 @@
                             </svg></a>
                     </div>
                     <div class="create-ic nav-icons">
-                        <a href="/create/">
+                        <a href="./create/">
                             <svg aria-label="New Post" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
                                 <path
@@ -61,7 +61,7 @@
                             </svg></a>
                     </div>
                     <div class="explore-ic nav-icons mob-nav-hide">
-                        <a href="/explore/">
+                        <a href="./explore/">
                             <svg aria-label="Find People" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
                                 <path clip-rule="evenodd"
@@ -71,7 +71,7 @@
                         </a>
                     </div>
                     <div class="activity-ic nav-icons mob-nav">
-                        <a href="/activity/">
+                        <a href="./activity/">
                             <svg aria-label="Activity Feed" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
                                 <path
@@ -91,7 +91,7 @@
         </header>
         <div class="mob-nav-div">
             <div class="home-ic">
-                <a href="/">
+                <a href="./">
                     <svg aria-label="Home" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                         viewBox="0 0 48 48" width="22">
                         <path
@@ -101,7 +101,7 @@
                 </a>
             </div>
             <div class="search-ic">
-                <a href="">
+                <a href="./">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         aria-hidden="true" role="img" width="22" height="22" preserveAspectRatio="xMidYMid meet"
                         viewBox="0 0 20 20">
@@ -112,7 +112,7 @@
                 </a>
             </div>
             <div class="reels-ic">
-                <a href="/reels/">
+                <a href="./reels/">
                     <svg aria-label="" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                         viewBox="0 0 48 48" width="22">
                         <path
@@ -122,7 +122,7 @@
                 </a>
             </div>
             <div class="activity-ic">
-                <a href="/activity/">
+                <a href="./activity/">
                     <svg aria-label="Activity Feed" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                         role="img" viewBox="0 0 48 48" width="22">
                         <path
