--- a/create/index.html
+++ b/create/index.html
@@ -17,11 +17,13 @@
         <script src="/Instagram-clone/assets/js/common.js"></script>
     </head>
 
-    <body>
+   <body>
         <header>
             <div class="nav-container">
                 <div class="logo-div">
-                    <img src="/Instagram-clone/assets/images/logo-name.png" alt="Instagram">
+                    <a href="/Instagram-clone/">
+                        <img src="/Instagram-clone/assets/images/logo-name.png" alt="Instagram">
+                    </a>
                 </div>
                 <div class="search-div">
                     <input type="search" name="q" id="search" class="search-bar" placeholder="Search">
@@ -31,9 +33,7 @@
                         <a href="/Instagram-clone/">
                             <svg aria-label="Home" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                                 viewBox="0 0 48 48" width="22">
-                                <path
-                                    d="M45.5 48H30.1c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2.1-4.6-4.6-4.6s-4.6 2.1-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.6-.6 2.1 0l21.5 21.5c.3.3.4.7.4 1.1v23.5c.1.8-.6 1.5-1.4 1.5z">
-                                </path>
+                                <path d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z"></path>
                             </svg>
                         </a>
                     </div>
@@ -50,16 +50,9 @@
                         <a href="/Instagram-clone/create/">
                             <svg aria-label="New Post" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
-                                <path
-                                    d="M31.8 48H16.2c-6.6 0-9.6-1.6-12.1-4C1.6 41.4 0 38.4 0 31.8V16.2C0 9.6 1.6 6.6 4 4.1 6.6 1.6 9.6 0 16.2 0h15.6c6.6 0 9.6 1.6 12.1 4C46.4 6.6 48 9.6 48 16.2v15.6c0 6.6-1.6 9.6-4 12.1-2.6 2.5-5.6 4.1-12.2 4.1zM16.2 3C10 3 7.8 4.6 6.1 6.2 4.6 7.8 3 10 3 16.2v15.6c0 6.2 1.6 8.4 3.2 10.1 1.6 1.6 3.8 3.1 10 3.1h15.6c6.2 0 8.4-1.6 10.1-3.2 1.6-1.6 3.1-3.8 3.1-10V16.2c0-6.2-1.6-8.4-3.2-10.1C40.2 4.6 38 3 31.8 3H16.2z">
-                                </path>
-                                <path
-                                    d="M36.3 25.5H11.7c-.8 0-1.5-.7-1.5-1.5s.7-1.5 1.5-1.5h24.6c.8 0 1.5.7 1.5 1.5s-.7 1.5-1.5 1.5z">
-                                </path>
-                                <path
-                                    d="M24 37.8c-.8 0-1.5-.7-1.5-1.5V11.7c0-.8.7-1.5 1.5-1.5s1.5.7 1.5 1.5v24.6c0 .8-.7 1.5-1.5 1.5z">
-                                </path>
-                            </svg></a>
+                                <path d="M43.9 4c-2.5-2.4-5.5-4-12.2-4H16.2C9.6 0 6.6 1.6 4 4.1 1.6 6.6 0 9.6 0 16.2v15.5c0 6.6 1.6 9.7 4.1 12.2 2.5 2.4 5.5 4 12.2 4h15.5c6.6 0 9.7-1.6 12.2-4.1 2.4-2.5 4-5.5 4-12.2V16.2c0-6.6-1.6-9.6-4.1-12.2zm-7.6 21.5H25.5v10.8c0 .8-.7 1.5-1.5 1.5s-1.5-.7-1.5-1.5V25.5H11.7c-.8 0-1.5-.7-1.5-1.5s.7-1.5 1.5-1.5h10.8V11.7c0-.8.7-1.5 1.5-1.5s1.5.7 1.5 1.5v10.8h10.8c.8 0 1.5.7 1.5 1.5s-.7 1.5-1.5 1.5z"></path>
+                            </svg>
+                        </a>
                     </div>
                     <div class="explore-ic nav-icons mob-nav-hide">
                         <a href="/Instagram-clone/explore/">
@@ -143,23 +136,24 @@
                 <div class="left-part">
                     <ul class="tab-btn">
                         <li class="tab-box active" onclick="tabSwitcher(event,'user-form')" id="default">User Info</li>
-                        <li class="tab-box" onclick="tabSwitcher(event,'story-form')">Story Info</li>
-                        <li class="tab-box" onclick="tabSwitcher(event,'post-form')">Post Info</li>
-                        <li class="tab-box" onclick="tabSwitcher(event,'suggestion-form')">Suggestion Info</li>
-                        <li class="tab-box" onclick="tabSwitcher(event,'preview-tab')">Preview</li>
-                        <li class="tab-box" onclick="tabSwitcher(event,'code-tab')">Code</li>
+                        <li class="tab-box" onclick="tabSwitcher(event,'story-form')" id="t1">Story Info</li>
+                        <li class="tab-box" onclick="tabSwitcher(event,'post-form')" id="t2">Post Info</li>
+                        <li class="tab-box" onclick="tabSwitcher(event,'suggestion-form')" id="t3">Suggestion Info</li>
+                        <li class="tab-box" onclick="tabSwitcher(event,'preview-tab')" id="t4">Preview</li>
+                        <li class="tab-box" onclick="tabSwitcher(event,'code-tab')" id="t5">Code</li>
                     </ul>
                 </div>
                 <div class="right-part">
                     <form action="" method="post" id="user-form" class="tab">
                         <div class="all-input-divs">
+                            <ul class="input-div-cont error" id="user-errors"></ul>
                             <div class="input-div-cont">
                                 <aside>
                                     <label for="pic" class="inp-labels">Profile Pic Url</label>
                                 </aside>
                                 <div class="input-div">
                                     <input type="url" name="pic" id="pic" class="inputs"
-                                        placeholder="/assets/images/default-user.png" />
+                                        placeholder="https://raw.githubusercontent.com/akshat-jjain/Instagram-clone/main/assets/images/like-em.png" />
                                 </div>
                             </div>
                             <div class="input-div-cont">
@@ -168,7 +162,7 @@
                                 </aside>
                                 <div class="input-div">
                                     <input type="text" name="username" id="username" class="inputs"
-                                        placeholder="akshat-jjain" />
+                                        placeholder="akshat_jjain" pattern="^(?!.*\.\.)(?!.*\.$)[^\W][\w.]{0,29}$" />
                                 </div>
                             </div>
                             <div class="input-div-cont">
@@ -185,7 +179,8 @@
                                     <label for="posts" class="inp-labels">Posts</label>
                                 </aside>
                                 <div class="input-div">
-                                    <input type="number" name="posts" id="posts" class="inputs" placeholder="100" />
+                                    <input type="number" name="posts" id="posts" class="inputs" placeholder="100"
+                                        value="100" />
                                 </div>
                             </div>
                             <div class="input-div-cont">
@@ -194,7 +189,7 @@
                                 </aside>
                                 <div class="input-div">
                                     <input type="number" name="followers" id="followers" class="inputs"
-                                        placeholder="25000" />
+                                        placeholder="25000" value="25000" />
                                 </div>
                             </div>
                             <div class="input-div-cont">
@@ -203,7 +198,7 @@
                                 </aside>
                                 <div class="input-div">
                                     <input type="number" name="following" id="following" class="inputs"
-                                        placeholder="1200" />
+                                        placeholder="1200" value="100" />
                                 </div>
                             </div>
                             <div class="input-div-cont">
@@ -223,21 +218,13 @@
                                 </div>
                             </div>
                             <div class="input-div">
-                                <input type="button" name="submit" id="submit" class="sub" value="Create">
+                                <input type="button" name="submit" id="submit" class="sub" value="Create"
+                                    onclick="loadUser()">
                             </div>
                         </div>
                     </form>
                     <form action="" method="post" id="story-form" class="tab">
                         <div class="all-input-divs">
-                            <div class="input-div-cont">
-                                <aside>
-                                    <label for="pic" class="inp-labels">Profile Pic Url</label>
-                                </aside>
-                                <div class="input-div">
-                                    <input type="url" name="pic" id="pic" class="inputs"
-                                        placeholder="/assets/images/default-user.png" />
-                                </div>
-                            </div>
                             <div class="input-div-cont">
                                 <aside>
                                     <label for="username" class="inp-labels">Username</label>
@@ -248,15 +235,37 @@
                                 </div>
                             </div>
                             <div class="input-div">
-                                <input type="checkbox" name="seen" id="seen" style="display: none;"
-                                    class="inputs" checked />
+                                <input type="checkbox" name="seen" id="seen" style="display: none;" class="inputs"
+                                    checked />
                                 <div class="check-ic" id="seen-check"></div>
                                 <span class="label-span">Seen</span>
+                            </div>
+                            <div class="input-div">
+                                <input type="button" name="submit" id="submit" class="sub" value="Create" />
+                                <input type="button" name="Skip" id="skip2" class="skip" value="Skip & Next" onclick="skip(this.id)" />
                             </div>
                         </div>
                     </form>
                     <form action="" method="post" id="post-form" class="tab">
                         <div class="all-input-divs">
+                            <div class="input-div-cont">
+                                <aside>
+                                    <label for="username" class="inp-labels">Username</label>
+                                </aside>
+                                <div class="input-div">
+                                    <input type="text" name="username" id="username" class="inputs"
+                                        placeholder="akshat-jjain">
+                                </div>
+                            </div>
+                            <div class="input-div-cont">
+                                <aside>
+                                    <label for="post-pic" class="inp-labels">Post Pic Url</label>
+                                </aside>
+                                <div class="input-div">
+                                    <input type="url" name="post-pic" id="post-pic" class="inputs"
+                                        placeholder="/assets/images/default-user.png">
+                                </div>
+                            </div>
                             <div class="input-div-cont">
                                 <aside>
                                     <label for="caption" class="inp-labels">Caption</label>
@@ -266,16 +275,90 @@
                                         placeholder="akshat-jjain" />
                                 </div>
                             </div>
+                            <div class="input-div-cont">
+                                <aside>
+                                    <label for="likes" class="inp-labels">Likes</label>
+                                </aside>
+                                <div class="input-div">
+                                    <input type="number" name="likes" id="likes" class="inputs" placeholder="100">
+                                </div>
+                            </div>
+                            <div class="input-div-cont">
+                                <aside>
+                                    <label for="liked-by" class="inp-labels">Liked By</label>
+                                </aside>
+                                <div class="input-div">
+                                    <input type="text" name="liked-by" id="liked-by" class="inputs"
+                                        placeholder="akshat-jjain" list="liked-by-data">
+                                    <datalist id="liked-by-data"></datalist>
+                                </div>
+                            </div>
+                            <div class="input-div-cont">
+                                <aside>
+                                    <label for="posts" class="inp-labels">Posts</label>
+                                </aside>
+                                <div class="input-div">
+                                    <input type="number" name="posts" id="posts" class="inputs" placeholder="100">
+                                </div>
+                            </div>
+                            <div class="input-div">
+                                <input type="button" name="submit" id="submit" class="sub" value="Create" />
+                                <input type="button" name="Skip" id="skip3" class="skip" value="Skip & Next" onclick="skip(this.id)" />
+                            </div>
                         </div>
                     </form>
-                    <form action="" method="post" id="suggestion-form" class="tab"></form>
+                    <form action="" method="post" id="suggestion-form" class="tab">
+                        <div class="all-input-divs">
+                            <div class="input-div-cont">
+                                <aside>
+                                    <label for="username" class="inp-labels">Username</label>
+                                </aside>
+                                <div class="input-div">
+                                    <input type="text" name="username" id="username" class="inputs"
+                                        placeholder="akshat-jjain">
+                                </div>
+                            </div>
+                            <div class="input-div">
+                                <input type="button" name="submit" id="submit" class="sub" value="Create" />
+                                <input type="button" name="Skip" id="skip4" class="skip" value="Skip & Next" onclick="skip(this.id)" />
+                            </div>
+                        </div>
+                    </form>
                     <div class="tab" id="preview-tab"></div>
-                    <div class="tab" id="code-tab"></div>
+                    <div class="tab" id="code-tab">
+                        <div class="user-code code-div">
+                            <div class="code-head">User Code <span onclick="copytext('ucb')">Copy</span></div>
+                            <div class="code-body" id="user-code">
+                                <textarea class="inputs" readonly id="ucb"></textarea>
+                            </div>
+                        </div>
+                        <div class="story-code code-div">
+                            <div class="code-head">Story Code <span onclick="copytext('scb')">Copy</span></div>
+                            <div class="code-body" id="story-code">
+                                <textarea class="inputs" readonly id="scb"></textarea>
+                            </div>
+
+                        </div>
+                        <div class="post-code code-div">
+                            <div class="code-head">Post Code <span onclick="copytext('pcb')">Copy</span></div>
+                            <div class="code-body" id="post-code">
+                                <textarea class="inputs" readonly id="pcb"></textarea>
+                            </div>
+
+                        </div>
+                        <div class="suggestion-code code-div">
+                            <div class="code-head">Suggestion Code <span onclick="copytext('sncb')">Copy</span></div>
+                            <div class="code-body" id="suggestion-code">
+                                <textarea class="inputs" readonly id="sncb"></textarea>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
         <script src="/Instagram-clone/assets/js/create.js"></script>
 
     </body>
+
 
 </html>
