--- a/profile/index.html
+++ b/profile/index.html
@@ -29,17 +29,15 @@
                 </div>
                 <div class="opt-div">
                     <div class="home-ic nav-icons mob-nav">
-                        <a href="/">
+                        <a href="/Instagram-clone/">
                             <svg aria-label="Home" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                                 viewBox="0 0 48 48" width="22">
-                                <path
-                                    d="M45.5 48H30.1c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2.1-4.6-4.6-4.6s-4.6 2.1-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.6-.6 2.1 0l21.5 21.5c.3.3.4.7.4 1.1v23.5c.1.8-.6 1.5-1.4 1.5z">
-                                </path>
+                                <path d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z"></path>
                             </svg>
                         </a>
                     </div>
                     <div class="direct-ic nav-icons">
-                        <a href="/inbox/">
+                        <a href="/Instagram-clone/inbox/">
                             <svg aria-label="Messenger" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
                                 <path
@@ -48,7 +46,7 @@
                             </svg></a>
                     </div>
                     <div class="create-ic nav-icons">
-                        <a href="/create/">
+                        <a href="/Instagram-clone/create/">
                             <svg aria-label="New Post" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
                                 <path
@@ -63,7 +61,7 @@
                             </svg></a>
                     </div>
                     <div class="explore-ic nav-icons mob-nav-hide">
-                        <a href="/explore/">
+                        <a href="/Instagram-clone/explore/">
                             <svg aria-label="Find People" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
                                 <path clip-rule="evenodd"
@@ -73,7 +71,7 @@
                         </a>
                     </div>
                     <div class="activity-ic nav-icons mob-nav">
-                        <a href="/activity/">
+                        <a href="/Instagram-clone/activity/">
                             <svg aria-label="Activity Feed" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                                 role="img" viewBox="0 0 48 48" width="22">
                                 <path
@@ -96,14 +94,12 @@
                 <a href="/Instagram-clone/">
                     <svg aria-label="Home" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                         viewBox="0 0 48 48" width="22">
-                        <path
-                            d="M45.5 48H30.1c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2.1-4.6-4.6-4.6s-4.6 2.1-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.6-.6 2.1 0l21.5 21.5c.3.3.4.7.4 1.1v23.5c.1.8-.6 1.5-1.4 1.5z">
-                        </path>
+                        <path d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z"></path>
                     </svg>
                 </a>
             </div>
             <div class="search-ic">
-                <a href="">
+                <a href="/Instagram-clone/">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         aria-hidden="true" role="img" width="22" height="22" preserveAspectRatio="xMidYMid meet"
                         viewBox="0 0 20 20">
@@ -114,7 +110,7 @@
                 </a>
             </div>
             <div class="reels-ic">
-                <a href="/reels/">
+                <a href="/Instagram-clone/reels/">
                     <svg aria-label="" class="_8-yf5 " color="#262626" fill="#262626" height="22" role="img"
                         viewBox="0 0 48 48" width="22">
                         <path
@@ -124,7 +120,7 @@
                 </a>
             </div>
             <div class="activity-ic">
-                <a href="/activity/">
+                <a href="/Instagram-clone/activity/">
                     <svg aria-label="Activity Feed" class="_8-yf5 " color="#262626" fill="#262626" height="22"
                         role="img" viewBox="0 0 48 48" width="22">
                         <path
@@ -154,7 +150,7 @@
                             </div>
                             <div class="btns-div">
                                 <button class="msg-btn">Message</button>
-                                <button>Message</button>
+                                <button></button>
                                 <button style="transform: rotate(180deg);" class="drop-arrow">
                                     <svg aria-label="Down Chevron Icon" class="_8-yf5 " color="#262626" fill="#262626"
                                         height="12" role="img" viewBox="0 0 48 48" width="12">
