--- a/create/index.html
+++ b/create/index.html
@@ -347,7 +347,9 @@
                             </div>
                         </div>
                     </form>
-                    <div class="tab" id="preview-tab"></div>
+                    <div class="tab" id="preview-tab">
+                        <div></div>
+                    </div>
                     <div class="tab" id="code-tab">
                         <div class="user-code code-div">
                             <div class="code-head">User Code <span onclick="copytext('ucb')">Copy</span></div>
