--- a/create/index.html
+++ b/create/index.html
@@ -157,7 +157,7 @@
                                 </aside>
                                 <div class="input-div">
                                     <input type="url" name="pic" id="pic" class="inputs"
-                                        placeholder="/assets/images/default-user.png" />
+                                        placeholder="https://raw.githubusercontent.com/akshat-jjain/Instagram-clone/main/assets/images/default-user.png" />
                                 </div>
                             </div>
                             <div class="input-div-cont">
@@ -271,7 +271,7 @@
                                 </aside>
                                 <div class="input-div">
                                     <input type="url" name="post-pic" id="post-pic" class="inputs"
-                                        placeholder="/assets/images/default-user.png">
+                                        placeholder="https://raw.githubusercontent.com/akshat-jjain/Instagram-clone/main/assets/images/boat-night-view.jpg">
                                 </div>
                             </div>
                             <div class="input-div-cont">
