--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </a>
             </div>
             <div class="search-ic">
-                <a href="./">
+                <a href="./explore/">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         aria-hidden="true" role="img" width="22" height="22" preserveAspectRatio="xMidYMid meet"
                         viewBox="0 0 20 20">
@@ -133,7 +133,8 @@
             <div class="profile-ic">
                 <div class="bor-contain"></div>
                 <div class="img-contain">
-                    <img src="./assets/images/default-user.png" alt="profile pic" class="profile-pic-ic" id="default-pp">
+                    <img src="./assets/images/default-user.png" alt="profile pic" class="profile-pic-ic"
+                        id="default-pp">
                 </div>
             </div>
         </div>
